jasper/force-app/main/default/objects/Follow_Up__c/Follow_Up__c.object-meta.xml
<CustomObject>
    <label>Follow Up</label>
    <nameField>
        <label>Follow Up Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Follow Ups</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>