jasper/force-app/main/default/objects/Follow_Up__c/fields/FeedBack1__c.field-meta.xml
<CustomField>
    <fullName>FeedBack1__c</fullName>
    <label>FeedBack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>