jasper/force-app/main/default/objects/Follow_Up__c/fields/feedback_text__c.field-meta.xml
<CustomField>
    <fullName>feedback_text__c</fullName>
    <label>feedback text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>