jasper/force-app/main/default/objects/Follow_Up__c/fields/Folllow_Up2_Summary__c.field-meta.xml
<CustomField>
    <fullName>Folllow_Up2_Summary__c</fullName>
    <label>Folllow Up2 Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>