jasper/force-app/main/default/objects/Follow_Up__c/fields/Folllow_Up3_Summary__c.field-meta.xml
<CustomField>
    <fullName>Folllow_Up3_Summary__c</fullName>
    <label>Folllow Up3 Summary</label>
    <type>TextArea</type>
</CustomField>