jasper/force-app/main/default/objects/Follow_Up__c/fields/Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up__c</fullName>
    <label>Follow Up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow up 1</fullName>
            </value>
            <value>
                <fullName>Follow up 2</fullName>
            </value>
            <value>
                <fullName>Follow Up 3</fullName>
            </value>
            <value>
                <fullName>Follow up 4</fullName>
            </value>
            <value>
                <fullName>Follow up 5</fullName>
            </value>
            <value>
                <fullName>Follow up 6</fullName>
            </value>
            <value>
                <fullName>Follow up 7</fullName>
            </value>
            <value>
                <fullName>Follow up 8</fullName>
            </value>
            <value>
                <fullName>Follow up 9</fullName>
            </value>
            <value>
                <fullName>Follow up 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>