jasper/force-app/main/default/objects/Follow_Up__c/fields/Previous_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Previous_Feedback__c</fullName>
    <label>Previous_Feedback</label>
    <type>TextArea</type>
</CustomField>