jasper/force-app/main/default/objects/Follow_Up__c/listViews/Head_Quarter_Follow_Up.listView-meta.xml
<ListView>
    <fullName>Head_Quarter_Follow_Up</fullName>
    <filterScope>Queue</filterScope>
    <label>Head_Quarter</label>
    <queue>Head_Quarter</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>