jasper/force-app/main/default/objects/Follow_Up__c/listViews/HQ_Queue_Follow_Up.listView-meta.xml
<ListView>
    <fullName>HQ_Queue_Follow_Up</fullName>
    <filterScope>Queue</filterScope>
    <label>HQ Queue</label>
    <queue>HQ_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>