jasper/force-app/main/default/objects/Follow_Up__c/listViews/Out_of_Business_Hours_Follow_Up.listView-meta.xml
<ListView>
    <fullName>Out_of_Business_Hours_Follow_Up</fullName>
    <filterScope>Queue</filterScope>
    <label>Out_of_Business_Hours</label>
    <queue>Out_of_Business_Hours</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>